--- a/gralog-fx/src/main/resources/preference_general.fxml
+++ b/gralog-fx/src/main/resources/preference_general.fxml
@@ -49,7 +49,10 @@
          <children>
             <CheckBox fx:id="StructurePane_showGrid" layoutY="5.0" mnemonicParsing="false" prefHeight="20.0" />
             <CheckBox fx:id="StructurePane_snapToGrid" layoutY="55.0" mnemonicParsing="false" />
-            <TextField fx:id="StructurePane_gridSize" layoutY="30.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" />
+            <TextField fx:id="StructurePane_gridSize" layoutY="30.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0">
+               <font>
+                  <Font size="11.0" />
+               </font></TextField>
             <ColorPicker fx:id="StructurePane_axisColor" layoutY="80.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
          </children>
       </Pane>
