--- a/gralog-fx/src/main/resources/preference_structure.fxml
+++ b/gralog-fx/src/main/resources/preference_structure.fxml
@@ -26,47 +26,47 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <Label layoutX="15.0" layoutY="40.0" prefHeight="20.0" prefWidth="138.0" text="Vertices" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="35.0" prefHeight="20.0" prefWidth="138.0" text="Vertices" textAlignment="RIGHT">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="60.0" prefHeight="20.0" prefWidth="138.0" text="Fill Color" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="55.0" prefHeight="20.0" prefWidth="138.0" text="Fill Color" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="85.0" prefHeight="20.0" prefWidth="138.0" text="Stroke Color" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="80.0" prefHeight="20.0" prefWidth="138.0" text="Stroke Color" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="110.0" prefHeight="20.0" prefWidth="95.0" text="Width" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="105.0" prefHeight="20.0" prefWidth="95.0" text="Width" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="135.0" prefHeight="20.0" prefWidth="95.0" text="Height" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="130.0" prefHeight="20.0" prefWidth="95.0" text="Height" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="170.0" prefHeight="20.0" prefWidth="138.0" text="Edges" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="165.0" prefHeight="20.0" prefWidth="138.0" text="Edges" textAlignment="RIGHT">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="190.0" prefHeight="20.0" prefWidth="138.0" text="Line Color" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="185.0" prefHeight="20.0" prefWidth="138.0" text="Line Color" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="215.0" prefHeight="20.0" prefWidth="138.0" text="Arrow Type" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="210.0" prefHeight="20.0" prefWidth="138.0" text="Arrow Type" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="15.0" layoutY="240.0" prefHeight="20.0" prefWidth="95.0" text="Thickness" textAlignment="RIGHT">
+            <Label layoutX="15.0" layoutY="235.0" prefHeight="20.0" prefWidth="95.0" text="Thickness" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
@@ -76,17 +76,44 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <Label layoutX="15.0" layoutY="260.0" prefHeight="20.0" prefWidth="138.0" text="Edge Endpoint Distance" textAlignment="RIGHT">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="285.0" prefHeight="20.0" prefWidth="138.0" text="Edge Endpoint Distance" textAlignment="RIGHT">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
          <children>
-            <ColorPicker fx:id="Vertex_strokeColor" layoutY="85.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
-            <TextField fx:id="Vertex_width" layoutY="110.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" />
-            <TextField fx:id="Vertex_height" layoutY="135.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" />
-            <ColorPicker fx:id="Vertex_fillColor" layoutY="60.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
-            <TextField fx:id="Edge_thickness" layoutY="240.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" />
-            <ColorPicker fx:id="Edge_color" layoutY="190.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
-            <ComboBox layoutY="215.0" maxHeight="20.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" promptText="Bezier" style="-fx-font-size: 10;" />
+            <ColorPicker fx:id="Vertex_strokeColor" layoutY="80.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
+            <TextField fx:id="Vertex_width" layoutY="105.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" promptText="0.0">
+               <font>
+                  <Font size="11.0" />
+               </font></TextField>
+            <TextField fx:id="Vertex_height" layoutY="130.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" promptText="0.0">
+               <font>
+                  <Font size="11.0" />
+               </font></TextField>
+            <ColorPicker fx:id="Vertex_fillColor" layoutY="55.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
+            <TextField fx:id="Edge_thickness" layoutY="235.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" promptText="0.0">
+               <font>
+                  <Font size="11.0" />
+               </font></TextField>
+            <ColorPicker fx:id="Edge_color" layoutY="185.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
+            <ComboBox fx:id="Edge_arrowType" layoutY="210.0" maxHeight="20.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 10;" />
+            <TextField fx:id="Edge_endPointDistance" layoutY="260.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" promptText="0.0">
+               <font>
+                  <Font size="11.0" />
+               </font></TextField>
+            <TextField fx:id="Edge_startPointDistance1" layoutY="285.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0" promptText="0.0">
+               <font>
+                  <Font size="11.0" />
+               </font></TextField>
          </children>
       </Pane>
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
