Added confirmation window
The confirmation window pops up whenever the user wants to close a tab (or exit the application) with an open, non-empty structure. (suboptimal, the metric we are looking for is "has been changed")

--- a/gralog-fx/src/main/resources/fxml/preference_window.fxml
+++ b/gralog-fx/src/main/resources/fxml/preference_window.fxml
@@ -12,17 +12,17 @@
       <Pane prefHeight="58.0" prefWidth="700.0">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e4e4e4" height="340.0" layoutX="-6.0" layoutY="25.0" stroke="#5d5d5d" strokeType="INSIDE" width="716.0" />
-            <ToggleButton id="structureButton" fx:id="structureButton" layoutX="315.0" layoutY="12.0" minHeight="20.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" style="-fx-focus-color: silver; -fx-faint-focus-color: transparent; -fx-background-radius: 0; -fx-background-insets: 0; -fx-border-width: 1 0 1 0;" styleClass="button" stylesheets="@stl.css" text="Structure">
+            <ToggleButton id="structureButton" fx:id="structureButton" layoutX="315.0" layoutY="12.0" minHeight="20.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" style="-fx-focus-color: silver; -fx-faint-focus-color: transparent; -fx-background-radius: 0; -fx-background-insets: 0; -fx-border-width: 1 0 1 0;" styleClass="button" stylesheets="@../stl.css" text="Structure">
                <font>
                   <Font size="11.0" />
                </font>
             </ToggleButton>
-            <ToggleButton id="generalButton" fx:id="generalButton" layoutX="245.0" layoutY="12.0" minHeight="20.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" selected="true" style="-fx-focus-color: silver; -fx-faint-focus-color: transparent; -fx-background-radius: 10 0 0 10; -fx-background-insets: 0; -fx-border-width: 1 0 1 1; -fx-border-radius: 10 0 0 10;" styleClass="button" stylesheets="@stl.css" text="General">
+            <ToggleButton id="generalButton" fx:id="generalButton" layoutX="245.0" layoutY="12.0" minHeight="20.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" selected="true" style="-fx-focus-color: silver; -fx-faint-focus-color: transparent; -fx-background-radius: 10 0 0 10; -fx-background-insets: 0; -fx-border-width: 1 0 1 1; -fx-border-radius: 10 0 0 10;" styleClass="button" stylesheets="@../stl.css" text="General">
                <font>
                   <Font size="11.0" />
                </font>
             </ToggleButton>
-            <ToggleButton id="specificButton" fx:id="specificButton" layoutX="385.0" layoutY="12.0" minHeight="20.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" style="-fx-focus-color: silver; -fx-faint-focus-color: transparent; -fx-background-radius: 0 10 10 0; -fx-background-insets: 0; -fx-border-width: 1 1 1 0; -fx-border-radius: 0 10 10 0;" styleClass="button" stylesheets="@stl.css" text="Specific">
+            <ToggleButton id="specificButton" fx:id="specificButton" layoutX="385.0" layoutY="12.0" minHeight="20.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" style="-fx-focus-color: silver; -fx-faint-focus-color: transparent; -fx-background-radius: 0 10 10 0; -fx-background-insets: 0; -fx-border-width: 1 1 1 0; -fx-border-radius: 0 10 10 0;" styleClass="button" stylesheets="@../stl.css" text="Specific">
                <font>
                   <Font size="11.0" />
                </font>
