--- a/gralog-fx/src/main/java/gralog/gralogfx/stylesheet.css
+++ b/gralog-fx/src/main/java/gralog/gralogfx/stylesheet.css
@@ -4,7 +4,11 @@
 }
 */
 
+/*depricated!!!!!!
+
 .helloWorld{
 	-fx-control-inner-background: transparent;
-	-fx-background-color:#BDBDBD;
+	-fx-background-color:#aaaaaa;
 }
+
+*/
