--- a/gralog-fx/src/main/resources/stylesheet.css
+++ b/gralog-fx/src/main/resources/stylesheet.css
@@ -5,5 +5,9 @@
 */
 
 .helloWorld{
-	-fx-control-inner-background: transparent;
+	/*-fx-control-inner-background: transparent;*/
+	-fx-background-color:transparent;
+	-fx-padding: 1px 0px -5px -0px;
+
+
 }
