Preferences added piping file, console tweaks
I added functionality for the user to specify a file which will be loaded into piping should he/she choose; i thought about this the way MAMP does this with a global file that can be occaisionally changed and I decided this made sense.

--- a/gralog-fx/src/main/resources/stylesheet.css
+++ b/gralog-fx/src/main/resources/stylesheet.css
@@ -4,10 +4,15 @@
 }
 */
 
-.helloWorld{
+.consoleTextStyle{
 	/*-fx-control-inner-background: transparent;*/
-	-fx-background-color:transparent;
-	-fx-padding: 1px 0px -5px -0px;
+	-fx-background-color: transparent;
+
+	-fx-padding: 1px 0px -0px -0px;
 
 
+}
+
+.consoleScrollViewStyle{
+	-fx-padding: 0px 0px 5px -0px;
 }
