--- a/gralog-fx/src/main/resources/fxml/preference_general.fxml
+++ b/gralog-fx/src/main/resources/fxml/preference_general.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -24,6 +25,11 @@
       <Pane prefHeight="200.0" prefWidth="200.0">
          <children>
             <Label layoutX="20.0" layoutY="5.0" prefHeight="20.0" prefWidth="138.0" text="Show Grid" textAlignment="RIGHT">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Label>
+            <Label layoutX="20.0" layoutY="105.0" prefHeight="20.0" prefWidth="138.0" text="Asuhhhhhh" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
@@ -53,6 +59,10 @@
                <font>
                   <Font size="11.0" />
                </font></TextField>
+           <Button fx:id="MainWindow_pipingFile" layoutY="105.0" minHeight="0.0" prefHeight="20.0" prefWidth="138.0">
+           <font>
+              <Font size="11.0" />
+           </font></Button>
             <ColorPicker fx:id="StructurePane_axisColor" layoutY="80.0" prefHeight="20.0" prefWidth="138.0" style="-fx-font-size: 11;" />
          </children>
       </Pane>
