Tweaked console, added more connectivity and user queries
Small console improvements here and there as well as new commands to query for doubles and integers; added more console connectivity

--- a/gralog-fx/src/main/resources/stylesheet.css
+++ b/gralog-fx/src/main/resources/stylesheet.css
@@ -9,8 +9,10 @@
 	-fx-background-color: transparent;
 
 	-fx-padding: 1px 0px -0px -0px;
+}
 
-
+.errorStyle{
+	-fx-text-inner-color: red;
 }
 
 .consoleScrollViewStyle{
