--- a/gralog-fx/src/main/resources/fxml/preference_general.fxml
+++ b/gralog-fx/src/main/resources/fxml/preference_general.fxml
@@ -29,7 +29,7 @@
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="20.0" layoutY="105.0" prefHeight="20.0" prefWidth="138.0" text="Asuhhhhhh" textAlignment="RIGHT">
+            <Label layoutX="20.0" layoutY="105.0" prefHeight="20.0" prefWidth="138.0" text="Ext. Prog. Source File" textAlignment="RIGHT">
                <font>
                   <Font size="11.0" />
                </font>
