--- a/gralog-fx/src/main/resources/stylesheet.css
+++ b/gralog-fx/src/main/resources/stylesheet.css
@@ -4,11 +4,24 @@
 }
 */
 
-.consoleTextStyle{
+.consoleTextStyle, .consoleTextStyle .viewport, .consoleTextStyle .content{
 	/*-fx-control-inner-background: transparent;*/
-	-fx-background-color: transparent;
+	-fx-background-color:transparent;;
+
 
 	-fx-padding: 1px 0px -0px -0px;
+}
+.text-area .arrow-button  {
+    -fx-opacity: 0.0;
+    -fx-cursor: text;
+}
+.text-area .scroll-bar:vertical:disabled {
+    -fx-opacity: 0;
+}
+
+.scroll-pane {
+    -fx-hbar-policy: never;
+    -fx-vbar-policy: never;
 }
 
 .errorStyle{
