Piping tweaks, setGraph and console message formats
Added following functionality:
-One method for sending outside messages to console with a flag to indicate what type/styles should be applied.

-Now you can do more piping after setting graph

--- a/gralog-fx/src/main/resources/stylesheet.css
+++ b/gralog-fx/src/main/resources/stylesheet.css
@@ -28,6 +28,14 @@
 	-fx-text-inner-color: red;
 }
 
+.gPrintStyle{
+    -fx-text-inner-color: blue;
+}
+
+.notificationStyle{
+    -fx-text-inner-color: green;
+}
+
 .consoleScrollViewStyle{
 	-fx-padding: 0px 0px 5px -0px;
 }
