Updated Manual, debugged and revised
Just nitty gritty piping level tweaks

--- a/gralog-fx/src/main/resources/stylesheet.css
+++ b/gralog-fx/src/main/resources/stylesheet.css
@@ -36,6 +36,10 @@
     -fx-text-inner-color: green;
 }
 
+.warningPrintStyle{
+    -fx-text-inner-color: #fc9611;
+}
+
 .consoleScrollViewStyle{
 	-fx-padding: 0px 0px 5px -0px;
 }
